--- a/app/views/appointments/_form.html.erb
+++ b/app/views/appointments/_form.html.erb
@@ -2,5 +2,9 @@
 
   <%= f.input :start_date, :as => :string, input_html: {id: "start_date"}, placeholder: "Start Date" %>
   <%= f.input :end_date, :as => :string, input_html: {id: "end_date"},placeholder: "End Date" %>
+
+  <%= hidden_field_tag :venue_id, current_user.venues.first.id %>
+
   <%= f.button :submit, class: "btn btn-primary"  %>
+
 <% end %>
