--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,2 +1,9 @@
 <h1>Pages#home</h1>
 <p>Find me in app/views/pages/home.html.erb</p>
+
+<li><%= link_to "See Artworks", artworks_path %></li>
+<li><%= link_to "Create Artwork", new_artwork_path %></li>
+<li><%= link_to "See Venues", venues_path %></li>
+<li><%= link_to "Create Venues", new_venue_path %></li>
+
+
