--- a/app/views/artworks/show.html.erb
+++ b/app/views/artworks/show.html.erb
@@ -5,3 +5,10 @@
 <h2 class="text-center" style="margin: 40px"><%= @artwork.weight %></h2>
 <h2 class="text-center" style="margin: 40px"><%= @artwork.location %></h2>
 <h2 class="text-center" style="margin: 40px"><%= @artwork.user_id %></h2>
+
+
+<h3 class="text-center" style="margin: 40px">
+  <%= link_to "Back", artworks_path %>
+  <%= link_to "Edit", edit_artwork_path(@artwork) %>
+  <%= link_to "Delete", artwork_path(@artwork), method: :delete, data: { confirm: "Are you sure?"}, class: "btn-book-show" %>
+</h3>
