--- a/app/views/venues/index.html.erb
+++ b/app/views/venues/index.html.erb
@@ -1,3 +1,7 @@
 <% @venues.each do |venue|%>
-  <%= venue.title %>
+  <li>
+    <%= link_to venue.title, venue_path(venue) %>
+      <%= link_to "Edit", edit_venue_path(venue) %>
+      <%= link_to "Delete", venue_path(venue), method: :delete, data: { confirm: "Are you sure?"}, class: "btn-book-show" %>
+  </li>
 <% end %>
