--- a/app/views/venues/show.html.erb
+++ b/app/views/venues/show.html.erb
@@ -2,5 +2,8 @@
 <h2 class="text-center" style="margin: 40px"><%= @venue.category %></h2>
 <h2 class="text-center" style="margin: 40px"><%= @venue.location %></h2>
 
-<li><%= link_to "Edit", edit_venue_path(@venue), class: "btn-book-show" %></li>
-<li><%= link_to "Delete", venue_path(@venue), method: :delete, data: { confirm: "Are you sure?"}, class: "btn-book-show" %></li>
+<h3 class="text-center" style="margin: 40px">
+  <%= link_to "Back", venues_path %>
+  <%= link_to "Edit", edit_venue_path(@venue) %>
+  <%= link_to "Delete", venue_path(@venue), method: :delete, data: { confirm: "Are you sure?"}, class: "btn-book-show" %>
+</h3>
