update photo uploader

--- a/app/views/artworks/new.html.erb
+++ b/app/views/artworks/new.html.erb
@@ -6,5 +6,6 @@
   <%= f.input :width %>
   <%= f.input :depth %>
   <%= f.input :weight %>
+  <%= f.input :photo, as: :attachinary %>
   <%= f.button :submit %>
 <% end %>
