--- a/app/views/venues/_form.html.erb
+++ b/app/views/venues/_form.html.erb
@@ -2,5 +2,6 @@
   <%= f.input :title %>
   <%= f.input :category %>
   <%= f.input :location %>
+  <%= f.input :photo, as: :attachinary %>
   <%= f.button :submit %>
 <% end %>
