--- a/app/views/venues/show.html.erb
+++ b/app/views/venues/show.html.erb
@@ -4,3 +4,7 @@
 
 <li><%= link_to "Edit", edit_venue_path(@venue), class: "btn-book-show" %></li>
 <li><%= link_to "Delete", venue_path(@venue), method: :delete, data: { confirm: "Are you sure?"}, class: "btn-book-show" %></li>
+
+<% if @venue.photo? %>
+  <%= cl_image_tag @venue.photo.path, width: 200, height: 300, crop: :fill %>
+<% end %>
