--- a/app/views/artworks/_form.html.erb
+++ b/app/views/artworks/_form.html.erb
@@ -6,5 +6,6 @@
   <%= f.input :width %>
   <%= f.input :depth %>
   <%= f.input :weight %>
+  <%= f.input :photo, as: :attachinary %>
   <%= f.button :submit %>
 <% end %>
