--- a/app/views/venues/index.html.erb
+++ b/app/views/venues/index.html.erb
@@ -1,6 +1,9 @@
 <% @venues.each do |venue|%>
   <li>
     <%= link_to venue.title, venue_path(venue) %>
+    <% if venue.photo %>
+      <%= cl_image_tag venue.photo.path, width: 300, height: 200, crop: :fill %>
+    <% end %>
       <%= link_to "Edit", edit_venue_path(venue) %>
       <%= link_to "Delete", venue_path(venue), method: :delete, data: { confirm: "Are you sure?"}, class: "btn-book-show" %>
   </li>
