--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -27,4 +27,13 @@
 <li><%= link_to "See Venues", venues_path %></li>
 <li><%= link_to "Create Venues", new_venue_path %></li>
 
+<% if current_user %>
 
+<h3>My Venues</h3>
+  <ul>
+  <% current_user.venues.each do |venue| %>
+    <li><%= venue.title %></li>
+
+  <% end %>
+  </ul>
+<% end %>
