--- a/app/views/artworks/show.html.erb
+++ b/app/views/artworks/show.html.erb
@@ -4,7 +4,7 @@
 <h2 class="text-center" style="margin: 40px"><%= @artwork.depth %></h2>
 <h2 class="text-center" style="margin: 40px"><%= @artwork.weight %></h2>
 <h2 class="text-center" style="margin: 40px"><%= @artwork.location %></h2>
-<h2 class="text-center" style="margin: 40px"><%= @artwork.user_id %></h2>
+<h2 class="text-center" style="margin: 40px"><%= @artwork.owner.email %></h2>
 
 
 <h3 class="text-center" style="margin: 40px">
