--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <title>
-      Galler-I
+      GALLER-I
     </title>
     <%= csrf_meta_tags %>
     <%= action_cable_meta_tag %>
