--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -26,7 +26,7 @@
 <li><%= link_to "Create Artwork", new_artwork_path %></li>
 <li><%= link_to "See Venues", venues_path %></li>
 <li><%= link_to "Create Venues", new_venue_path %></li>
-
+<li><%= link_to "My Appointments", appointments_path %></li>
 <% if current_user %>
 
 <h3>My Venues</h3>
