--- a/app/views/venues/index.html.erb
+++ b/app/views/venues/index.html.erb
@@ -8,3 +8,144 @@
       <%= link_to "Delete", venue_path(venue), method: :delete, data: { confirm: "Are you sure?"}, class: "btn-book-show" %>
   </li>
 <% end %>
+<div class="container">
+  <div class="row">
+    <div class="col-xs-12 col-md-8">
+      <div class="row">
+       <!-- Search control -->
+        <div class="row search-row">What are you looking for?
+              <input type="text" class="filtr-search" name="filtr-search" data-search placeholder="City?  Or a genre?  Or an Artist perhaps?" >
+        </div>
+
+        <div class="container">
+          <!-- Filter Controls - Simple Mode -->
+          <div class="row">
+      <!-- A basic setup of simple mode filter controls, all you have to do is use data-filter="all"
+      for an unfiltered gallery and then the values of your categories to filter between them -->
+      <ul class="simplefilter">
+        Individual Art Filters:
+        <li class="active" data-filter="all">All</li>
+        <li data-filter= 1 >Cafe</li>
+        <li data-filter= 2 >Restaruant</li>
+        <li data-filter= 3 >Bar</li>
+        <li data-filter= 4 >Co-Working</li>
+        <li data-filter= 5 >Office</li>
+        <li data-filter= 5 >Miscellaneous</li>
+
+      </ul>
+    </div>
+
+    <!-- Filter Controls - Multifilter Mode -->
+    <div class="row">
+      <!-- A basic setup of multifilter controls, when the user toggles a category
+      the corresponding items are rendered or hidden -->
+      <ul class="multifilter">
+       Toggle Multiple Types of Artwork:
+        <li data-multifilter= 1 >Cafe</li>
+        <li data-multifilter= 2 >Restaurant</li>
+        <li data-multifilter= 3 >Bar</li>
+        <li data-multifilter= 4 >Co-Working</li>
+        <li data-multifilter= 5 >Office</li>
+        <li data-multifilter= 6 >Miscellaneous</li>
+      </ul>
+    </div>
+
+    <!-- Shuffle & Sort Controls -->
+    <div class="row">
+      <ul class="sortandshuffle">
+        Sort &amp; Shuffle controls:
+        <!-- Basic shuffle control -->
+        <li class="shuffle-btn" data-shuffle>Shuffle</li>
+        <!-- Basic sort controls consisting of asc/desc button and a select -->
+
+      </ul>
+    </div>
+
+
+
+    <div class="row">
+      <!-- This is the set up of a basic gallery, your items must have the categories they belong to in a data-category
+      attribute, which starts from the value 1 and goes up from there -->
+     <div class="container">
+      <div class="filtr-container">
+
+        <%= @cat = 0  %>
+
+        <% @venues.each do |artwork| %>
+          <% if artwork.category == "Painting" %>
+            <%= @cat = 1 %>
+            <% elsif artwork.category == "Drawing"%>
+            <%= @cat = 2 %>
+            <% elsif artwork.category == "Sculpture"%>
+            <%= @cat = 3 %>
+            <% elsif artwork.category == "Photography"%>
+            <%= @cat = 4 %>
+            <% elsif artwork.category == "Installation"%>
+            <%= @cat = 5 %>
+            <% else %>
+            <%= @cat = 6 %>
+          <% end %>
+
+        <div class="col-xs-6 col-sm-4 col-md-3 filtr-item card" data-category="<%= @cat %>" data-sort=" <%= artwork.category %> ">
+
+          <%= link_to(artwork, style: 'text-decoration: none;') do %>
+          <% if artwork.photo %>
+          <% image =  artwork.photo.path %>
+          <% else  %>
+          <% image =  "https://unsplash.com/?photo=-LRuNvY8W7Q" %>
+          <% end %>
+          <img class="img-responsive" src="<%= cl_image_path(image) %>" alt="sample image">
+          <span class="item-desc"> <%= artwork.title  %> <br> cat: <%= artwork.category %> <br> loc: <%= artwork.location %> </span>
+        </div>
+        <% end %>
+        <% end %>
+            </div>
+          </div>
+        </div>
+        <br>
+      </div>
+    </div>
+    <div class="col-xs-6 col-md-4">
+      <div id="map" style="width: 500px; height: 600px;"></div>
+    </div>
+</div>
+</div>
+</div>
+
+
+<!-- Include jQuery & Filterizr -->
+<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
+<script src="/filterizr/jquery.filterizr.min.js"></script>
+
+
+<!-- Kick off Filterizr -->
+<script type="text/javascript">
+  $(function() {
+            //Initialize filterizr with default options
+            $('.filtr-container').filterizr('setOptions', { delay: 80, delayMode: 'progressive' });
+          });
+        </script>
+
+
+
+
+<div id="map" style="width: 60%; height: 600px;"></div>
+
+<% content_for(:after_js) do %>
+  <%= javascript_tag do %>
+    $(document).ready(function() {
+      var handler = Gmaps.build('Google');
+      handler.buildMap({ internal: { id: 'map' } }, function() {
+        markers = handler.addMarkers(<%= raw @hash.to_json %>);
+        handler.bounds.extendWith(markers);
+        handler.fitMapToBounds();
+        if (markers.length == 0) {
+          handler.getMap().setZoom(2);
+        } else if (markers.length == 1) {
+          handler.getMap().setZoom(14);
+        }
+      });
+    });
+  <% end %>
+<% end %>
+
