--- a/app/views/shared/_navbar.html.erb
+++ b/app/views/shared/_navbar.html.erb
@@ -1,77 +1,61 @@
 <div class="navbar-wagon">
   <!-- Logo -->
-  <%= link_to root_path, class: "navbar-wagon-brand" do %>
-    <%= image_tag "logo.png" %>
-  <% end %>
+  <%= link_to "GALLER-I", root_path, style: "text-decoration: none; font-size:14px; margin: 10px; color: #BD0FE1;" %>
+  <div class="navbar-right">
+    <div class="navbar-wagon-right hidden-xs hidden-sm">
 
-  <!-- Right Navigation -->
-  <div class="navbar-wagon-right hidden-xs hidden-sm">
+      <!-- <div class="badge-container"> -->
+      <%= link_to "Become an Artist", new_artwork_path, style: "text-decoration: none; font-size:14px;; margin: 10px; color: #9F9F9F;" %>
+      <!-- </div> -->
+      <%= link_to "My appointments", appointments_path, style: "text-decoration: none; font-size:14px; margin: 10px; color: #9F9F9F;" %>
 
-    <!-- Search form -->
-    <form action="" class="navbar-wagon-search">
-      <input type="text" class="navbar-wagon-search-input" placeholder="Search something">
-      <button type="submit" class="navbar-wagon-search-btn">
-        <i class="fa fa-search"></i>
-      </button>
-    </form>
-
-    <!-- Different navigation if login or not -->
-    <% if user_signed_in? %>
-
-      <!-- Notification -->
-      <%= link_to "#", class: "navbar-wagon-item navbar-wagon-link" do %>
-        <div class="badge-container">
-          <i class="fa fa-envelope-o"></i>
-          <div class="badge badge-blue">3</div>
-        </div>
-      <% end %>
-
-      <!-- Profile picture and dropdown -->
-      <div class="navbar-wagon-item">
-        <div class="dropdown">
-          <% avatar_url = current_user.facebook_picture_url || "http://placehold.it/30x30" %>
-          <%= image_tag avatar_url, class: "avatar dropdown-toggle", id: "navbar-wagon-menu", "data-toggle" => "dropdown" %>
-          <ul class="dropdown-menu dropdown-menu-right navbar-wagon-dropdown-menu">
-            <li>
-              <%= link_to "#" do %>
-                <i class="fa fa-user"></i> <%= t(".profile", default: "Profile") %>
-              <% end %>
-            </li>
-            <li>
-              <%= link_to "#" do %>
-                <i class="fa fa-home"></i>  <%= t(".profile", default: "Home") %>
-              <% end %>
-            </li>
-            <li>
-              <%= link_to destroy_user_session_path, method: :delete do %>
-                <i class="fa fa-sign-out"></i>  <%= t(".sign_out", default: "Log out") %>
-              <% end %>
-            </li>
-          </ul>
-        </div>
+  <!--   <a href="" class="navbar-wagon-item navbar-wagon-link">
+      <div class="badge-container">
+        <i class="fa fa-envelope-o"></i>
+        <div class="badge badge-blue">3</div>
       </div>
+    </a> -->
 
+    <!-- Notification link-->
+    <!-- Profile picture and dropdown -->
+    <% if user_signed_in? %>
+    <div class="navbar-wagon-item">
+      <div class="dropdown">
+        <% avatar_url = current_user.facebook_picture_url || "http://placehold.it/30x30" %>
+        <%= image_tag avatar_url, class: "avatar dropdown-toggle", id: "navbar-wagon-menu", "data-toggle" => "dropdown" %>
+        <ul class="dropdown-menu dropdown-menu-right navbar-wagon-dropdown-menu">
+          <li><%= link_to "Profile", "", style: "text-decoration: none; font-size:14px;" %></li>
+          <li><a href="#">Dashboard</a></li>
+          <li><%= link_to "Log Out", destroy_user_session_path, method: :delete, style: "text-decoration: none; font-size:14px; ; margin: 10px; color: #9F9F9F;" %></li>
+        </ul>
+      </div>
+    </div>
     <% else %>
-
-      <!-- Login text link -->
-      <%= link_to t(".sign_in", default: "Login"), new_user_session_path, class: "navbar-wagon-item navbar-wagon-link" %>
-
+    <%= link_to "Sign up", new_user_registration_path, style: "text-decoration: none; font-size:14px; margin: 10px; color: #9F9F9F;" %>
+    <%= link_to "Login", new_user_session_path, style: "text-decoration: none; font-size:14px; margin: 10px; color: #9F9F9F;" %>
     <% end %>
 
-    <!-- Button (call-to-action) -->
-    <%= link_to t(".top_call_to_action", default: "Post stuff"), "#", class: "navbar-wagon-item navbar-wagon-button btn" %>
   </div>
 
-  <!-- Dropdown list appearing on mobile only -->
+
+  <!-- Dropdown appearing on mobile only -->
   <div class="navbar-wagon-item hidden-md hidden-lg">
     <div class="dropdown">
       <i class="fa fa-bars dropdown-toggle" data-toggle="dropdown"></i>
       <ul class="dropdown-menu dropdown-menu-right navbar-wagon-dropdown-menu">
-        <li><a href="#">Some mobile link</a></li>
-        <li><a href="#">Other one</a></li>
-        <li><a href="#">Other one</a></li>
+        <li><%= link_to "Become an Artist", new_artwork_path, style: "text-decoration: none; font-size:14px;; margin: 10px; color: #9F9F9F;" %></li>
+        <li><%= link_to "My requests", appointments_path, style: "text-decoration: none; font-size:14px; margin: 10px; color: #9F9F9F;" %></li>
+        <% if user_signed_in? %>
+        <li><%= link_to "Profile", "", style: "text-decoration: none; font-size:14px;" %></li>
+        <li><%= link_to "Log Out", destroy_user_session_path, method: :delete, style: "text-decoration: none; font-size:14px; ; margin: 10px; color: #9F9F9F;" %></li>
+        <% else %>
+        <li><%= link_to "Sign up", new_user_registration_path, style: "text-decoration: none; font-size:14px; margin: 10px; color: #9F9F9F;" %></li>
+        <li><%= link_to "Login", new_user_session_path, style: "text-decoration: none; font-size:14px; margin: 10px; color: #9F9F9F;" %></li>
+        <% end %>
       </ul>
     </div>
   </div>
+</div>
+
 </div>
 
