--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -2,9 +2,11 @@
 @import "config/variables";
 @import "config/bootstrap_variables";
 
+
 // External libraries
 @import "bootstrap-sprockets";
 @import "bootstrap";
+@import 'bootstrap-datetimepicker';
 @import "font-awesome-sprockets";
 @import "font-awesome";
 @import "vendor/index";
@@ -13,3 +15,6 @@
 @import "layout/index";
 @import "components/index";
 @import "pages/index";
+
+
+
