--- a/app/views/appointments/_form.html.erb
+++ b/app/views/appointments/_form.html.erb
@@ -1,7 +1,28 @@
 <%= simple_form_for([@artwork,@appointment]) do |f| %>
   <%= @appointment.artwork_id %>
-  <%= f.input :start_date, :as => :string, input_html: {id: "start_date"}, placeholder: "Start Date" %>
-  <%= f.input :end_date, :as => :string, input_html: {id: "end_date"},placeholder: "End Date" %>
+  <div class="container">
+    <div class="row">
+        <div class='col-sm-6'>
+            <div class="form-group">
+                    <%= f.input :start_date, :as => :string, input_html: {id: "start_date"}, placeholder: "Start Date" %>
+            </div>
+        </div>
+
+    </div>
+</div>
+
+ <div class="container">
+    <div class="row">
+        <div class='col-sm-6'>
+            <div class="form-group">
+                    <%= f.input :end_date, :as => :string, input_html: {id: "end_date"}, placeholder: "End Date" %>
+            </div>
+        </div>
+
+    </div>
+</div>
+
+
 
   <%= hidden_field_tag :venue_id, current_user.venues.first.id %>
 
