--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -3,7 +3,9 @@
     <head>
       <meta charset="UTF-8">
       <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-      <title>GALLER-I</title>
+<link rel="icon" type="image/x-icon" href="/app/assets/images/favicon.ico">
+      <title>GALLER-I </title>
+
       <%= csrf_meta_tags %>
       <%= action_cable_meta_tag %>
       <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/css/ bootstrap.min.css">
