--- a/app/assets/stylesheets/components/_badges.scss
+++ b/app/assets/stylesheets/components/_badges.scss
@@ -20,6 +20,10 @@
   box-shadow: 0px 0px 2px rgba(0, 0, 0, 0.1);
   border-radius: 50%;
 }
+
+.badge-purple {
+  background: #BE63C1;
+}
 .badge-red {
   background: #EE5F5B;
 }
