--- a/app/views/shared/_navbar.html.erb
+++ b/app/views/shared/_navbar.html.erb
@@ -1,6 +1,6 @@
 <div class="navbar-wagon">
   <!-- Logo -->
-  <%= link_to "GALLER-I", root_path, style: "text-decoration: none; font-size:14px; margin: 10px; color: #BD0FE1;" %>
+  <strong><%= link_to "GALLER-I", root_path, style: "text-decoration: none; font-size:14px; margin: 10px; color: #BE63C1;" %></strong>
   <div class="navbar-right">
     <div class="navbar-wagon-right hidden-xs hidden-sm">
 
@@ -24,18 +24,18 @@
       <%= link_to "#", class: "navbar-wagon-item navbar-wagon-link" do %>
         <div class="badge-container">
           <i class="fa fa-envelope-o"></i>
-          <div class="badge badge-blue">3</div>
+          <div class="badge badge-purple">3</div>
         </div>
       <% end %>
-        
+
     <div class="navbar-wagon-item">
       <div class="dropdown">
         <% avatar_url = current_user.facebook_picture_url || "http://placehold.it/30x30" %>
         <%= image_tag avatar_url, class: "avatar dropdown-toggle", id: "navbar-wagon-menu", "data-toggle" => "dropdown" %>
         <ul class="dropdown-menu dropdown-menu-right navbar-wagon-dropdown-menu">
-          <li><%= link_to "Profile", "", style: "text-decoration: none; font-size:14px;" %></li>
+          <li><%= link_to "Profile", profile_path(current_user.id), style: "text-decoration: none; font-size:14px;" %></li>
           <li><a href="#">Dashboard</a></li>
-          <li><%= link_to "Log Out", destroy_user_session_path, method: :delete, style: "text-decoration: none; font-size:14px; ; margin: 10px; color: #9F9F9F;" %></li>
+          <li><%= link_to "Log Out", destroy_user_session_path, method: :delete, style: "text-decoration: none; font-size:14px; color: #9F9F9F;" %></li>
         </ul>
 
       </div>
@@ -56,7 +56,7 @@
         <li><%= link_to "Become an Artist", new_artwork_path, style: "text-decoration: none; font-size:14px;; margin: 10px; color: #9F9F9F;" %></li>
         <li><%= link_to "My requests", appointments_path, style: "text-decoration: none; font-size:14px; margin: 10px; color: #9F9F9F;" %></li>
         <% if user_signed_in? %>
-        <li><%= link_to "Profile", "", style: "text-decoration: none; font-size:14px;" %></li>
+        <li><%= link_to "Profile", profile_path(current_user.id), style: "text-decoration: none; font-size:14px; margin:10px;"%></li>
         <li><%= link_to "Log Out", destroy_user_session_path, method: :delete, style: "text-decoration: none; font-size:14px; ; margin: 10px; color: #9F9F9F;" %></li>
         <% else %>
         <li><%= link_to "Sign up", new_user_registration_path, style: "text-decoration: none; font-size:14px; margin: 10px; color: #9F9F9F;" %></li>
