--- a/app/views/artworks/show.html.erb
+++ b/app/views/artworks/show.html.erb
@@ -13,7 +13,7 @@ This Artwork is currently available..You should book it now!!
 See this artwork on these dates at the following locations:
 <br>
 <%  @status.each do |appt|%>
-<%= appt.start_date %> to <%= appt.end_date %> at <%= appt.venue.title %>
+<%= appt.start_date %> to <%= appt.end_date %> at the <%= appt.venue.category %>: <%= link_to appt.venue.title, venue_path(appt.venue.id) %>
 <br>
 <% end %>
 <% end %>
