uncomment search and home dtapicjer

--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -8,10 +8,10 @@
       <input name="city" type="text" class="form-control mb-2 mr-sm-2 mb-sm-0" id="inlineFormInput" placeholder="Enter your city">
 
 
-<!--       <label class="sr-only" for="inlineFormInputGroup">When</label>
+      <label class="sr-only" for="inlineFormInputGroup">When</label>
       <div class="input-group mb-2 mr-sm-2 mb-sm-0">
         <input name="date_range" type="text" class="form-control" id="dateRange" placeholder="When">
-      </div> -->
+      </div>
       <input type="submit"  class="btn btn-primary" value="Search!">
 
     </form>
