Added Button create artwork in the profile

--- a/app/views/profile/show.html.erb
+++ b/app/views/profile/show.html.erb
@@ -68,6 +68,8 @@
     </li>
   </ul>
 <% end %>
+<%= link_to "Create an Artwork", new_artwork_path %>
+
 
 <h3>People requests for my artworks</h3>
 To do
