--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -32,7 +32,7 @@
       <div class="row">
         <div class="col-md-4">
           <div class="thumbnail">
-            <%= link_to(root_path, style: 'text-decoration: none;') do %>
+            <%= link_to(search_path(test: 1), style: 'text-decoration: none;') do %>
 
 
 
@@ -45,35 +45,35 @@
         </div>
         <div class="col-md-4">
           <div class="thumbnail">
-            <%= link_to(root_path, style: 'text-decoration: none;') do %>
+            <%= link_to(search_path(test: 2), style: 'text-decoration: none;') do %>
               <img src="" alt="Drawings" style="width:100%">
             <% end %>
           </div>
         </div>
         <div class="col-md-4">
           <div class="thumbnail">
-            <%= link_to(root_path, style: 'text-decoration: none;') do %>
+            <%= link_to(search_path(test: 3), style: 'text-decoration: none;') do %>
               <img src="" alt="Photography" style="width:100%">
             <% end %>
           </div>
         </div>
         <div class="col-md-4">
           <div class="thumbnail">
-            <%= link_to(root_path, style: 'text-decoration: none;') do %>
+            <%= link_to(search_path(test: 4), style: 'text-decoration: none;') do %>
               <img src="" alt="Sculptures" style="width:100%">
             <% end %>
           </div>
         </div>
         <div class="col-md-4">
           <div class="thumbnail">
-            <%= link_to(root_path, style: 'text-decoration: none;') do %>
+            <%= link_to(search_path(test: 5), style: 'text-decoration: none;') do %>
               <img src="" alt="Installations" style="width:100%">
             <% end %>
           </div>
         </div>
         <div class="col-md-4">
           <div class="thumbnail">
-            <%= link_to(root_path, style: 'text-decoration: none;') do %>
+            <%= link_to(search_path(test: 6), style: 'text-decoration: none;') do %>
               <img src="" alt="Miscellaneous" style="width:100%">
             <% end %>
           </div>
