--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -4,8 +4,9 @@
       <meta charset="UTF-8">
       <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 <link rel="icon" type="image/x-icon" href="/app/assets/images/favicon.ico">
-      <title>GALLER-I </title>
-
+      <title>GALLER-I</title>
+<meta name="description" content="The number one art-sharing platform in the world.">
+<meta name="keywords" content="Gallery,Artwork,Art,Painting">
       <%= csrf_meta_tags %>
       <%= action_cable_meta_tag %>
       <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/css/ bootstrap.min.css">
