--- a/app/views/profile/show.html.erb
+++ b/app/views/profile/show.html.erb
@@ -18,7 +18,7 @@
 <h3>My Venues</h3>
 <ul>
 <% current_user.venues.each do |venue| %>
-  <li><%= venue.title %></li>
+  <li><%= link_to venue.title, venue_path, style: 'text-decoration: none; color:black;'  %></li>
 
 <% end %>
 </ul>
@@ -70,5 +70,18 @@
 <% end %>
 
 <h3>People requests for my artworks</h3>
-To do
+<%  current_user.artworks.each do |artwork|  %>
+<% artwork.appointments.each do |appointment| %>
+<ul>
+  <li>
 
+    <%= appointment.venue.employees.first.email %> <br>
+    <%= appointment.to_json %>
+    <%= link_to 'Confirm',  appointment_confirm_path(appointment), class: "btn" %>
+    <%= link_to 'Decline',  appointment_decline_path(appointment), class: "btn" %>
+  <br>
+  </li>
+</ul>
+
+  <% end %>
+<% end %>
